@@ -2,7 +2,7 @@
 #    Boost.Wave: A Standard compliant C++ preprocessor library
 #    http://www.boost.org/
 #
-#    Copyright (c) 2003-2006 Hartmut Kaiser. Distributed under the Boost
+#    Copyright (c) 2003-2008 Hartmut Kaiser. Distributed under the Boost
 #    Software License, Version 1.0. (See accompanying file
 #    LICENSE_1_0.txt or copy at http://www.boost.org/LICENSE_1_0.txt)
 #
@@ -48,6 +48,7 @@ t_1_034.cpp
 t_1_035.cpp
 t_1_036.cpp
 t_1_037.cpp
+t_1_038.cpp
 
 #
 # t_2: Preprocessing directives
