@@ -24,7 +24,7 @@ exe wave
     /boost//thread
     /boost//date_time
     :
-	<threading>multi
+    <threading>multi
 #   <debug-symbols>on
     :
     release
